[Michael][update]  1、optimized launch anim、tab anim

--- a/ox_home/assets/locale/i18n_cs.json
+++ b/ox_home/assets/locale/i18n_cs.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Domů",
-  "Contact": "Kontakt",
-  "Discover": "Objevte",
-  "Me": "Já"
+  "home": "Domů",
+  "contact": "Kontakt",
+  "discover": "Objevte",
+  "me": "Já"
 }
