--- a/ox_home/assets/locale/i18n_de.json
+++ b/ox_home/assets/locale/i18n_de.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Startseite",
-  "Contact": "Kontakt",
-  "Discover": "Entdecken",
-  "Me": "Ich"
+  "home": "Startseite",
+  "contact": "Kontakt",
+  "discover": "Entdecken",
+  "me": "Ich"
 }
