--- a/ox_home/assets/locale/i18n_el.json
+++ b/ox_home/assets/locale/i18n_el.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Αρχική",
-  "Contact": "Επικοινωνία",
-  "Discover": "Ανακαλύψτε",
-  "Me": "Εγώ"
+  "home": "Αρχική",
+  "contact": "Επικοινωνία",
+  "discover": "Ανακαλύψτε",
+  "me": "Εγώ"
 }
