--- a/ox_home/assets/locale/i18n_hi.json
+++ b/ox_home/assets/locale/i18n_hi.json
@@ -1,6 +1,6 @@
 {
-  "Home": "होम",
-  "Contact": "संपर्क",
-  "Discover": "खोजें",
-  "Me": "मैं"
+  "home": "होम",
+  "contact": "संपर्क",
+  "discover": "खोजें",
+  "me": "मैं"
 }
