--- a/ox_home/assets/locale/i18n_hu.json
+++ b/ox_home/assets/locale/i18n_hu.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Főoldal",
-  "Contact": "Kapcsolat",
-  "Discover": "Felfedez",
-  "Me": "Én"
+  "home": "Főoldal",
+  "contact": "Kapcsolat",
+  "discover": "Felfedez",
+  "me": "Én"
 }
