--- a/ox_home/assets/locale/i18n_it.json
+++ b/ox_home/assets/locale/i18n_it.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Home",
-  "Contact": "Contatto",
-  "Discover": "Scoprire",
-  "Me": "Io"
+  "home": "Home",
+  "contact": "Contatto",
+  "discover": "Scoprire",
+  "me": "Io"
 }
