--- a/ox_home/assets/locale/i18n_lv.json
+++ b/ox_home/assets/locale/i18n_lv.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Sākumlapa",
-  "Contact": "Kontakti",
-  "Discover": "Atklāt",
-  "Me": "Es"
+  "home": "Sākumlapa",
+  "contact": "Kontakti",
+  "discover": "Atklāt",
+  "me": "Es"
 }
