--- a/ox_home/assets/locale/i18n_pl.json
+++ b/ox_home/assets/locale/i18n_pl.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Strona główna",
-  "Contact": "Kontakt",
-  "Discover": "Odkryć",
-  "Me": "Ja"
+  "home": "Strona główna",
+  "contact": "Kontakt",
+  "discover": "Odkryć",
+  "me": "Ja"
 }
