--- a/ox_home/assets/locale/i18n_ru.json
+++ b/ox_home/assets/locale/i18n_ru.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Главная",
-  "Contact": "Контакт",
-  "Discover": "Обнаружить",
-  "Me": "Я"
+  "home": "Главная",
+  "contact": "Контакт",
+  "discover": "Обнаружить",
+  "me": "Я"
 }
