--- a/ox_home/assets/locale/i18n_sv.json
+++ b/ox_home/assets/locale/i18n_sv.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Hem",
-  "Contact": "Kontakt",
-  "Discover": "Upptäck",
-  "Me": "Jag"
+  "home": "Hem",
+  "contact": "Kontakt",
+  "discover": "Upptäck",
+  "me": "Jag"
 }
