--- a/ox_home/assets/locale/i18n_tr.json
+++ b/ox_home/assets/locale/i18n_tr.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Ana Sayfa",
-  "Contact": "İletişim",
-  "Discover": "Keşfet",
-  "Me": "Ben"
+  "home": "Ana Sayfa",
+  "contact": "İletişim",
+  "discover": "Keşfet",
+  "me": "Ben"
 }
