--- a/ox_home/assets/locale/i18n_uk.json
+++ b/ox_home/assets/locale/i18n_uk.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Головна",
-  "Contact": "Контакт",
-  "Discover": "Відкрити",
-  "Me": "Я"
+  "home": "Головна",
+  "contact": "Контакт",
+  "discover": "Відкрити",
+  "me": "Я"
 }
