--- a/ox_home/assets/locale/i18n_zh.json
+++ b/ox_home/assets/locale/i18n_zh.json
@@ -1,6 +1,6 @@
 {
-  "Home": "首页",
-  "Contact": "联系人",
-  "Discover": "发现",
-  "Me": "我的"
+  "home": "首页",
+  "contact": "联系人",
+  "discover": "发现",
+  "me": "我的"
 }
