--- a/ox_home/assets/locale/i18n_zh_tw.json
+++ b/ox_home/assets/locale/i18n_zh_tw.json
@@ -1,6 +1,6 @@
 {
-  "Home": "首頁",
-  "Contact": "聯繫",
-  "Discover": "發現",
-  "Me": "我"
+  "home": "首頁",
+  "contact": "聯繫",
+  "discover": "發現",
+  "me": "我"
 }
