--- a/ox_home/assets/locale/i18n_ar.json
+++ b/ox_home/assets/locale/i18n_ar.json
@@ -1,6 +1,6 @@
 {
-  "Home": "الرئيسية",
-  "Contact": "اتصل",
-  "Discover": "اكتشاف",
-  "Me": "أنا"
+  "home": "الرئيسية",
+  "contact": "اتصل",
+  "discover": "اكتشاف",
+  "me": "أنا"
 }
