--- a/ox_home/assets/locale/i18n_az.json
+++ b/ox_home/assets/locale/i18n_az.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Əsas",
-  "Contact": "Əlaqə",
-  "Discover": "Kəşf et",
-  "Me": "Mən"
+  "home": "Əsas",
+  "contact": "Əlaqə",
+  "discover": "Kəşf et",
+  "me": "Mən"
 }
