--- a/ox_home/assets/locale/i18n_bg.json
+++ b/ox_home/assets/locale/i18n_bg.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Начало",
-  "Contact": "Контакт",
-  "Discover": "Разкрий",
-  "Me": "Аз"
+  "home": "Начало",
+  "contact": "Контакт",
+  "discover": "Разкрий",
+  "me": "Аз"
 }
