--- a/ox_home/assets/locale/i18n_ca.json
+++ b/ox_home/assets/locale/i18n_ca.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Inici",
-  "Contact": "Contacte",
-  "Discover": "Descobreix",
-  "Me": "Jo"
+  "home": "Inici",
+  "contact": "Contacte",
+  "discover": "Descobreix",
+  "me": "Jo"
 }
