--- a/ox_home/assets/locale/i18n_da.json
+++ b/ox_home/assets/locale/i18n_da.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Hjem",
-  "Contact": "Kontakt",
-  "Discover": "Opdag",
-  "Me": "Jeg"
+  "home": "Hjem",
+  "contact": "Kontakt",
+  "discover": "Opdag",
+  "me": "Jeg"
 }
