--- a/ox_home/assets/locale/i18n_es.json
+++ b/ox_home/assets/locale/i18n_es.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Inicio",
-  "Contact": "Contacto",
-  "Discover": "Descubrir",
-  "Me": "Yo"
+  "home": "Inicio",
+  "contact": "Contacto",
+  "discover": "Descubrir",
+  "me": "Yo"
 }
