--- a/ox_home/assets/locale/i18n_et.json
+++ b/ox_home/assets/locale/i18n_et.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Avaleht",
-  "Contact": "Kontakt",
-  "Discover": "Avasta",
-  "Me": "Mina"
+  "home": "Avaleht",
+  "contact": "Kontakt",
+  "discover": "Avasta",
+  "me": "Mina"
 }
