--- a/ox_home/assets/locale/i18n_fa.json
+++ b/ox_home/assets/locale/i18n_fa.json
@@ -1,6 +1,6 @@
 {
-  "Home": "چت‌ها",
-  "Contact": "تماس‌ها",
-  "Discover": "کشف",
-  "Me": "من"
+  "home": "چت‌ها",
+  "contact": "تماس‌ها",
+  "discover": "کشف",
+  "me": "من"
 }
