--- a/ox_home/assets/locale/i18n_fr.json
+++ b/ox_home/assets/locale/i18n_fr.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Accueil",
-  "Contact": "Contact",
-  "Discover": "Découvrir",
-  "Me": "Moi"
+  "home": "Accueil",
+  "contact": "Contact",
+  "discover": "Découvrir",
+  "me": "Moi"
 }
