--- a/ox_home/assets/locale/i18n_id.json
+++ b/ox_home/assets/locale/i18n_id.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Beranda",
-  "Contact": "Kontak",
-  "Discover": "Temukan",
-  "Me": "Saya"
+  "home": "Beranda",
+  "contact": "Kontak",
+  "discover": "Temukan",
+  "me": "Saya"
 }
