--- a/ox_home/assets/locale/i18n_ja.json
+++ b/ox_home/assets/locale/i18n_ja.json
@@ -1,6 +1,6 @@
 {
-  "Home": "ホーム",
-  "Contact": "連絡先",
-  "Discover": "発見",
-  "Me": "マイページ"
+  "home": "ホーム",
+  "contact": "連絡先",
+  "discover": "発見",
+  "me": "マイページ"
 }
