--- a/ox_home/assets/locale/i18n_ko.json
+++ b/ox_home/assets/locale/i18n_ko.json
@@ -1,6 +1,6 @@
 {
-  "Home": "홈",
-  "Contact": "연락처",
-  "Discover": "발견",
-  "Me": "나"
+  "home": "홈",
+  "contact": "연락처",
+  "discover": "발견",
+  "me": "나"
 }
