--- a/ox_home/assets/locale/i18n_nl.json
+++ b/ox_home/assets/locale/i18n_nl.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Startpagina",
-  "Contact": "Contact",
-  "Discover": "Ontdekken",
-  "Me": "Ik"
+  "home": "Startpagina",
+  "contact": "Contact",
+  "discover": "Ontdekken",
+  "me": "Ik"
 }
