--- a/ox_home/assets/locale/i18n_pt.json
+++ b/ox_home/assets/locale/i18n_pt.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Início",
-  "Contact": "Contato",
-  "Discover": "Descobrir",
-  "Me": "Eu"
+  "home": "Início",
+  "contact": "Contato",
+  "discover": "Descobrir",
+  "me": "Eu"
 }
