--- a/ox_home/assets/locale/i18n_th.json
+++ b/ox_home/assets/locale/i18n_th.json
@@ -1,6 +1,6 @@
 {
-  "Home": "หน้าหลัก",
-  "Contact": "ติดต่อ",
-  "Discover": "ค้นพบ",
-  "Me": "ฉัน"
+  "home": "หน้าหลัก",
+  "contact": "ติดต่อ",
+  "discover": "ค้นพบ",
+  "me": "ฉัน"
 }
