--- a/ox_home/assets/locale/i18n_vi.json
+++ b/ox_home/assets/locale/i18n_vi.json
@@ -1,6 +1,6 @@
 {
-  "Home": "Trang chủ",
-  "Contact": "Liên hệ",
-  "Discover": "Khám phá",
-  "Me": "Tôi"
+  "home": "Trang chủ",
+  "contact": "Liên hệ",
+  "discover": "Khám phá",
+  "me": "Tôi"
 }
